--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <script src="jquery-3.4.1.js"></script>
+        <script src="main.js"></script>
         <title>Spring Getting Started</title>
     </head>
     <body>
@@ -10,7 +12,5 @@
         <h4>Introduce your name to receive an awesome greeting</h4>
         <p>Name: <input type="text" id="name"></p>
         <button id="get_greeting">Greet me!</button>
-
-        <script src="/main.js"></script>
     </body>
 </html>
