--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,18 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <script src="jquery-3.4.1.js"></script>
-    <!--        <script src="main.js"></script>-->
     <script>
         $(document).ready(function () {
             $('#get_greeting').click(function (){
-
-                $.ajax({
-                    type: 'GET',
-                    url: '/',
-                    success: function(greeting) {
-                        $('#greeting_placeholder').append(greeting.name);
-                    }
-                 });
+                $.get("/", {name: $('#name').val()},
+                function(greeting) {
+                    $('#greeting_placeholder').text(greeting.name);
+                });
             });
         });
         </script>
@@ -26,6 +21,6 @@
 <h4>Introduce your name to receive an awesome greeting</h4>
 <p>Name: <input type="text" id="name"></p>
 <button id="get_greeting">Greet me!</button>
-<p id="greeting_placeholder"></p>
+<font color=red><h2 id="greeting_placeholder"></h2></font>
 </body>
 </html>
